# settingpp

./: .gitignore  CMakeLists.txt  README.md
include/: json.hpp
src/: settingpp.hpp
tests/: all_test.h  data_type_test.cpp  edge_case_test.cpp  load_write_file_test.cpp  main_test.cpp
